--- a/index.html
+++ b/index.html
@@ -10,26 +10,43 @@
   </ul>
 </div>
 <script type="text/javascript">
+
+/*gets computerSelection*/
 var choices = ['Rock', 'Paper' , 'Scissors'];
+
 computerPlay = function(){
   var choice = choices[Math.floor(Math.random() * choices.length)];
   return(choice);
 }
 
-var cock = prompt('what is your selection?');
- playRound = function(playerSelection , computerSelection){
-  cock = playerSelection;
-  playerSelection.toLowerCase();
+/*gets playerSection and to lowerCase*/
+var playerSelection = prompt('What is your choice?').toLowerCase();
   firstLetter = playerSelection.slice(0,1);
   firstLetter = firstLetter.toUpperCase();
   playerSelection = playerSelection.replace(playerSelection[0], firstLetter);
+
+  /*sets score to zero*/
+  var score = 0;
+
+/* playes one round of game*/
+ playRound = function(playerSelection , computerSelection){
+      if(playerSelection == 'Rock' && computerSelection == 'Rock'){
+    console.log('Tie!')
+  } else if(playerSelection == 'Rock' && computerSelection == 'Paper'){
+    console.log('You lose! Paper covers Rock');
+  } else if(playerSelection == 'Rock' && computerSelection == 'Scissors'){
+    console.log('You win! Rock smashes Scissors');
+    score ++;
+  } else if (playerSelection == 'Paper' &&  computerSelection == 'Rock'){
+    console.log('You win! Paper covers Rock');
+    score ++;
+  };
   return(playerSelection + computerSelection)
 }
   
   const computerSelection = computerPlay();
   console.log(playRound(playerSelection, computerSelection)) 
+
 </script>
 </body>
 </html>
-
-<!--we need a switch statment to run through all the possible ifs-->
