--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </div>
 <script type="text/javascript">
 
-/*gets computerSelection*/
+//gets computerSelection
 var choices = ['Rock', 'Paper' , 'Scissors'];
 
 computerPlay = function(){
@@ -19,7 +19,7 @@ computerPlay = function(){
   return(choice);
 }
 
-/*gets playerSection and to lowerCase and first letter toUpperCase*/
+//gets playerSection and to lowerCase and first letter toUpperCase
 playerPlay = function(){
 var playerSelection = prompt('What is your choice?').toLowerCase();
   firstLetter = playerSelection.slice(0,1);
@@ -28,11 +28,14 @@ var playerSelection = prompt('What is your choice?').toLowerCase();
   return(playerSelection);
 }
 
-  /*sets scores to zero*/
+  //sets scores to zero
   var playerScore = 0;
   var computerScore = 0;
 
-/* playes one round of game*/
+  //full game play
+game = function(){
+  for (i = 0; i < 5; i++){
+    //plays one round of game
  playRound = function(playerSelection , computerSelection){
       if(playerSelection == 'Rock' && computerSelection == 'Rock'){
     console.log('Tie!')
@@ -62,20 +65,25 @@ var playerSelection = prompt('What is your choice?').toLowerCase();
   return(playerSelection + computerSelection)
 };
 
-/*sets constants to be used in functions*/
+//sets constants to be used in functions
   const playerSelection = playerPlay();
   const computerSelection = computerPlay();
-  console.log(playRound(playerSelection, computerSelection)) 
+  console.log(playRound(playerSelection, computerSelection)); 
+  }
+}
+game();
 
-  game = function(){
-    for(i = 0; i < 5 ; i++)
-  if(computerScore < 5 || playerScore < 5){
-      playRound(playerSelection, computerSelection);
-  };
-
-  };
-  game();
-
+//compares computerScore and playerScore give final win or lose console.log
+final = function(){
+if(computerScore < playerScore){
+  console.log('You won best of 5 rounds! Way to go!');
+} else if(computerScore > playerScore){
+  console.log('You lost best of 5 rounds sucker!')
+} else {
+  console.log('Tie game! Try again')
+};
+}
+final();
 
 </script>
 </body>
